security_group.tf
resource "aws_security_group" "allow_ssh" {
  name        = "allow-ssh"
  description = "Allow SSH inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "allow_ping" {
  name        = "allow-ping"
  description = "Allow ICMP inbound traffic"

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "allow_jenkins" {
  name        = "allow-jenkins"
  description = "Allow jenkins inbound traffic"

 ingress {
   from_port   = 8080
   to_port     = 8080
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "allow_mygo" {
  name        = "allow-mygo"
  description = "Allow mygo inbound traffic"

 ingress {
   from_port   = 60419
   to_port     = 60419
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "allow_registry" {
  name        = "allow-registry"
  description = "Allow registry inbound traffic"

 ingress {
   from_port   = 5000
   to_port     = 5000
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "allow_outbound" {
  name        = "allow-all-outbound"
  description = "Allow all outbound traffic"

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
